facet-diff/tests/snapshots/diff_snapshots__diff_scalar_str_unicode.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────────────────╮
│"Hello 世界"                   │
╰───────────────────────────────╯
╭After──────────────────────────╮
│"Hello 🌍"                     │
╰───────────────────────────────╯
╔Diff═══════════════════════════╗
║"Hello 世界" → "Hello 🌍"      ║
╚═══════════════════════════════╝
