facet-diff/tests/snapshots/diff_snapshots__diff_scalar_str_vs_string_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────────╮
│"hello"                │
╰───────────────────────╯
╭After──────────────────╮
│"hello"                │
╰───────────────────────╯
╔Diff═══════════════════╗
║"hello" → "hello"      ║
║(strings are identical)║
╚═══════════════════════╝
