facet-diff/tests/snapshots/diff_snapshots__diff_scalar_str_whitespace.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────────────────╮
│"hello world"                   │
╰────────────────────────────────╯
╭After───────────────────────────╮
│"hello  world"                  │
╰────────────────────────────────╯
╔Diff════════════════════════════╗
║"hello world" → "hello  world"  ║
╚════════════════════════════════╝
