facet-diff/tests/snapshots/diff_snapshots__diff_scalar_u128_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before───────────────────────────────────────╮
│0                                            │
╰─────────────────────────────────────────────╯
╭After────────────────────────────────────────╮
│340000000000000000000000000000000000000      │
╰─────────────────────────────────────────────╯
╔Diff═════════════════════════════════════════╗
║0 → 340000000000000000000000000000000000000  ║
╚═════════════════════════════════════════════╝
