facet-diff/tests/snapshots/diff_snapshots__diff_scalar_u128_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────────────────────────╮
│200000000000000000000000000000000000000│
╰───────────────────────────────────────╯
╭After──────────────────────────────────╮
│200000000000000000000000000000000000000│
╰───────────────────────────────────────╯
╔Diff═══════════════════════════════════╗
║(structurally equal)                   ║
╚═══════════════════════════════════════╝
