facet-diff/tests/snapshots/diff_snapshots__diff_scalar_u128_min_max.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before───────────────────────────────────────╮
│0                                            │
╰─────────────────────────────────────────────╯
╭After────────────────────────────────────────╮
│340282366920938463463374607431768211455      │
╰─────────────────────────────────────────────╯
╔Diff═════════════════════════════════════════╗
║0 → 340282366920938463463374607431768211455  ║
╚═════════════════════════════════════════════╝
