facet-diff/tests/snapshots/diff_snapshots__diff_scalar_u16_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│50000               │
╰────────────────────╯
╭After───────────────╮
│50000               │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
