facet-diff/tests/snapshots/diff_snapshots__diff_scalar_u64_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│10000000000000000000│
╰────────────────────╯
╭After───────────────╮
│10000000000000000000│
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
