facet-diff/tests/snapshots/diff_snapshots__diff_scalar_u64_min_max.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before────────────────────╮
│0                         │
╰──────────────────────────╯
╭After─────────────────────╮
│18446744073709551615      │
╰──────────────────────────╯
╔Diff══════════════════════╗
║0 → 18446744073709551615  ║
╚══════════════════════════╝
