facet-diff/tests/snapshots/diff_snapshots__diff_scalar_u8_min_max.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────╮
│0           │
╰────────────╯
╭After───────╮
│255         │
╰────────────╯
╔Diff════════╗
║0 → 255     ║
╚════════════╝
