facet-diff/tests/snapshots/diff_snapshots__diff_scalar_usize_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before───────╮
│0            │
╰─────────────╯
╭After────────╮
│1000000      │
╰─────────────╯
╔Diff═════════╗
║0 → 1000000  ║
╚═════════════╝
